--- a/clinicpetweb/src/main/webapp/WEB-INF/web.xml
+++ b/clinicpetweb/src/main/webapp/WEB-INF/web.xml
@@ -8,23 +8,43 @@
     </description>
 
     <servlet>
-        <servlet-name>ClinicServlet</servlet-name>
-        <servlet-class>ClinicServlet</servlet-class>
+        <servlet-name>UserViewServlet</servlet-name>
+        <servlet-class>UserViewServlet</servlet-class>
     </servlet>
 
-    <servlet-mapping>
-        <servlet-name>ClinicServlet</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
-    
     <servlet-mapping>
         <servlet-name>UserViewServlet</servlet-name>
         <url-pattern>/user/view</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>UserCreateServlet</servlet-name>
+        <servlet-class>UserCreateServlet</servlet-class>
+    </servlet>
     
     <servlet-mapping>
         <servlet-name>UserCreateServlet</servlet-name>
-        <url-pattern></url-pattern>
+        <url-pattern>/user/create</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>UserEditServlet</servlet-name>
+        <servlet-class>UserEditServlet</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>UserEditServlet</servlet-name>
+        <url-pattern>/user/edit</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>UserDeleteServlet</servlet-name>
+        <servlet-class>UserDeleteServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>UserDeleteServlet</servlet-name>
+        <url-pattern>/user/delete</url-pattern>
     </servlet-mapping>
 
 </web-app>
